--- a/client/style.css
+++ b/client/style.css
@@ -1030,7 +1030,7 @@ footer {
     display: none;
     background: none;
     border: none;
-    color: white;
+    color: #8B3A3A;
     font-size: 1.3rem;
     cursor: pointer;
     z-index: 10000;
