--- a/client/responsive.css
+++ b/client/responsive.css
@@ -37,7 +37,7 @@
     display: none;
     background: none;
     border: none;
-    color: white;
+    color: #8B3A3A;
     font-size: 1.5rem;
     cursor: pointer;
     padding: 10px;
